--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+    <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
         <title> Jovian Careers</title>
         <style>
             p{
@@ -31,18 +33,19 @@
                 margin:0 auto
             }
 
-
         </style>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <div id="body">
-        
+        <div class="container">
         <p> Hello there, You'll learn about the job opening at Jovian here.</p> 
         <h1> Jovian Careers</h1>
-        <div class ="image">
         <img id ="banner" src="{{url_for ('static',filename='home_image.jpg')}}" height="300" alt="Jovian Careers">
-        </div>
+        <!-- <div class="mt-4"> adding the gap between the image and the text -->
+        <div class="mt-4"> 
         <h2> About Jovian</h2>
+        </div>
+        <!-- <h2>Check</h2> -->
         <h3> Test Heading</h3>
        <p> Lorem ipsum dolor sit amet. Non quasi aliquid ut dolore cumque ea 
        ipsam repudiandae ut molestias voluptas ut dolor facere quo placeat facere. 
@@ -54,8 +57,15 @@
         Et tempore voluptatibus ea doloribus dolore et molestiae expedita ea porro
          similique.</p>
          <h2>Open positions</h2>
+         <div class="mt-3"> 
          <h3> TODO</h3>
+         </div>
+        <div class="text-center">
+         <!-- <div class="position-realtive"> -->
          <button> Contact Us</button>
+         </div>
+        </div> 
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
