Created the various job roles each separated by a bottom line

--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -1,3 +1,16 @@
-<div>
-    <h4> {%jb.title%}</h4>
+<style>
+#a{
+  border-bottom: double;
+}
+    
+</style>
+<div> 
+    <!-- <h4> {{jb[id]}}</h4> -->
+    <!-- <h4> ID</h4>     -->
+    <h4>{{jb["title"]}}</h4>
+    <h6>{{jb["Salary"]}}</h6>
+    <div id="a">
+     <h6>{{jb["Location"]}}</h6> 
+    </div>
+    
 </div>
