--- a/templates/home.html
+++ b/templates/home.html
@@ -57,12 +57,18 @@
         Et tempore voluptatibus ea doloribus dolore et molestiae expedita ea porro
          similique.</p>
          <h2>Open positions</h2>
+         <div>
+            {% for jb in job %}
+                {%include 'jobs.html' %}
+            {% endfor %}
+         </div>
          <div class="mt-3"> 
          <h3> TODO</h3>
          </div>
         <div class="text-center">
          <!-- <div class="position-realtive"> -->
-         <button> Contact Us</button>
+         <!-- <button> Contact Us</button> -->
+         <button class="btn btn-primary" type="button">Contact Us</button>
          </div>
         </div> 
         </div>
