--- a/templates/home.html
+++ b/templates/home.html
@@ -63,7 +63,7 @@
             {% endfor %}
          </div>
          <div class="mt-3"> 
-         <h3> TODO</h3>
+         <!-- <h3> TODO</h3> -->
          </div>
         <div class="text-center">
          <!-- <div class="position-realtive"> -->
