--- a/templates/home.html
+++ b/templates/home.html
@@ -37,6 +37,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
+        {%include 'nav.html'%}
         <div class="container">
         <p> Hello there, You'll learn about the job opening at Jovian here.</p> 
         <h1> Jovian Careers</h1>
@@ -68,10 +69,11 @@
         <div class="text-center">
          <!-- <div class="position-realtive"> -->
          <!-- <button> Contact Us</button> -->
-         <button class="btn btn-primary" type="button">Contact Us</button>
+         <button class="btn btn-primary mb-2" type="button">Contact Us</button>
          </div>
         </div> 
         </div>
+        {%include 'footer.html'%}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
